--- a/pom.xml
+++ b/pom.xml
@@ -109,9 +109,7 @@
         <module>batch</module>
 
         <module>hbase2-module</module>
-        <module>metric</module>
-        <module>collector-starter</module>
-        <module>web-starter</module>
+        <module>metric-module</module>
 
         <!-- <module>agent-testweb</module> -->
         <!-- <module>plugins-it</module> -->
